fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts: #services do k8s
  - nginx-service
  http:
    - fault: 
        delay:
          fixedDelay: 10s
          percentage:
            value: 33
        abort:
          httpStatus: 500
          percentage:
            value: 33
      route:
      - destination:
          host: nginx-service
          subset: all #destination rule
        

---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
  subsets:
    - name: all
      labels:
        app: ngnix
