vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts: #services do k8s
  - nginx-service
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1 #destination rule
        weight: 0
      - destination:
          host: nginx-service
          subset: v2
        weight: 100
